force-app/main/default/objects/Bank__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>