force-app/main/default/objects/Bank__c/fields/Bank_Address__c.field-meta.xml
<CustomField>
    <fullName>Bank_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bank  Address</label>
    <length>30</length>
    <type>Text</type>
</CustomField>