force-app/main/default/objects/Bank__c/fields/Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity__c</fullName>
    <label>Legal Entity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0101</fullName>
            </value>
            <value>
                <fullName>1001</fullName>
            </value>
            <value>
                <fullName>1520</fullName>
            </value>
            <value>
                <fullName>1111</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>