force-app/main/default/objects/Bank__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <length>55</length>
    <referenceTo>Products_c__x</referenceTo>
    <relationshipLabel>Banks</relationshipLabel>
    <relationshipName>Banks</relationshipName>
    <type>ExternalLookup</type>
</CustomField>