force-app/main/default/objects/Bank__c/fields/Student_Fee__c.field-meta.xml
<CustomField>
    <fullName>Student_Fee__c</fullName>
    <label>Student Fee</label>
    <length>20</length>
    <referenceTo>Student_Fee_c__x</referenceTo>
    <relationshipLabel>Banks</relationshipLabel>
    <relationshipName>Banks</relationshipName>
    <type>ExternalLookup</type>
</CustomField>